# cpp-primer

1/: CMakeLists.txt  Makefile
1/headers/: exercises.h  sales_item.h
1/src/: exercises.cc  main.cc
2/: CMakeLists.txt  Makefile
2/headers/: examples.h  exercises.h
2/src/: exercises.cc  main.cc
2/tests/: exercises_test.cc
